Fix text underlining when buttons are within content-markdown wrap

--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -14,7 +14,7 @@ button {
 
   border: 0 none;
   text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
 
   &--primary {
       background-color: $matisse;
